--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "dev1": "vite build --mode dev1",
-    "dev2": "vite build --mode dev2",
-    "staging": "vite build --mode stage",
+    "dev": "vite build",  
+    "build": "vite build --mode prod",
     "prod": "vite build --mode prod",
     "preview": "vite preview",
-    "wp": "cd dist && php -S localhost:4444"
+    "cdn": "cd dist && php -S localhost:4545"
   },
   "dependencies": {
     "axios": "^1.5.0",
